--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -4,7 +4,7 @@ $google-font: "https://fonts.googleapis.com/css2?family=Capriola&family=Love+Ya+
 $mainFontFamily: "Source Sans Pro", sans-serif;
 $titleFontFamily: "Capriola", serif;
 $descriptionFontFamily: "Love Ya Like A Sister", cursive;
-$wowFontFamily: 'Exo', sans-serif;
+$wowFontFamily: "Exo", sans-serif;
 
 // -----------------------------COLORS-----------------------------
 $main: #f39f5f;
