--- a/src/scss/layouts/layout_1200/_header.scss
+++ b/src/scss/layouts/layout_1200/_header.scss
@@ -1,3 +1,15 @@
 .header {
- 
+  &_menu {
+    display: none;
+  }
+
+  &_logo {
+    display: block;
+  }
+
+  &_text-logo {
+    display: flex;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
 }
