--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,10 +1,10 @@
 //-----------------------------FONTS-----------------------------
-$google-font: "https://fonts.googleapis.com/css2?family=Capriola&family=Love+Ya+Like+A+Sister&family=Source+Sans+Pro:wght@400;600&display=swap";
+$google-font: "https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap";
 
 $mainFontFamily: "Source Sans Pro", sans-serif;
 $titleFontFamily: "Capriola", serif;
 $descriptionFontFamily: "Love Ya Like A Sister", cursive;
-$wowFontFamily: "Exo", sans-serif;
+$wowFontFamily: "Libre Baskerville", sans-serif;
 
 // -----------------------------COLORS-----------------------------
 $main: #f39f5f;
