--- a/src/scss/layouts/layout_000/_index.scss
+++ b/src/scss/layouts/layout_000/_index.scss
@@ -1,5 +1,7 @@
-@import "general";
 @import "header";
+@import "banner";
+
+@import "general";
 @import "nav";
 @import "title";
 @import "statinfo";
