--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,10 +1,10 @@
 //-----------------------------FONTS-----------------------------
-$google-font: "https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap";
+$google-font: "https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600&family=Zilla+Slab:wght@400;500;600;700&display=swap";
 
-$mainFontFamily: "Source Sans Pro", sans-serif;
+$mainFontFamily: "Source Sans 3", sans-serif;
 $titleFontFamily: "Capriola", serif;
 $descriptionFontFamily: "Love Ya Like A Sister", cursive;
-$wowFontFamily: "Libre Baskerville", sans-serif;
+$wowFontFamily: "Zilla Slab", sans-serif;
 
 // -----------------------------COLORS-----------------------------
 $main: #f39f5f;
