--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,7 +1,7 @@
 //-----------------------------FONTS-----------------------------
 $google-font: "https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600&family=Zilla+Slab:wght@400;500;600;700&display=swap";
 
-$mainFontFamily: "Source Sans 3", sans-serif;
+$mainFontFamily: "Open Sans", sans-serif;
 $titleFontFamily: "Capriola", serif;
 $descriptionFontFamily: "Love Ya Like A Sister", cursive;
 $wowFontFamily: "Zilla Slab", sans-serif;
