--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,8 +10,10 @@
   @import "layouts/layout_800/index";
 }
 
-
 @media (min-width: 1200px) {
   @import "layouts/layout_1200/index";
 }
 
+@media (min-width: 1500px) {
+  @import "layouts/layout_1500/index";
+}
