--- a/src/scss/layouts/layout_500/_banner.scss
+++ b/src/scss/layouts/layout_500/_banner.scss
@@ -1,4 +1,12 @@
 .banner {
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  max-width: 500px;
+
+  &_title {
+    font-size: 35px;
+    line-height: 35px;
+    max-width: 290px;
+  }
 }
