--- a/src/scss/layouts/layout_800/_banner.scss
+++ b/src/scss/layouts/layout_800/_banner.scss
@@ -1,9 +1,11 @@
 .banner {
-  max-width: 930px;
+  width: 80%;
+  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
   &_title {
-    font-size: 30px;
+    font-size: 50px;
+    line-height: 50px;
     max-width: 450px;
     margin-top: 25px;
   }
