--- a/src/scss/layouts/layout_000/_banner.scss
+++ b/src/scss/layouts/layout_000/_banner.scss
@@ -15,6 +15,7 @@
 
   // background: linear-gradient(180deg, #fe8b05 0%, #fed714 139.52%);
   background-image: url(../../../i/img/bg.png);
+  background-position: center;
   border-radius: 40px;
   position: relative;
 
