--- a/src/scss/layouts/layout_1200/_banner.scss
+++ b/src/scss/layouts/layout_1200/_banner.scss
@@ -5,6 +5,8 @@
   max-width: 100%;
   padding-top: 35px;
   min-height: 515px;
+  background-image: url(../../../i/img/bg-1200.png);
+
   &_main {
     width: 500px;
     max-width: 500px;
