--- a/src/scss/layouts/layout_500/_banner.scss
+++ b/src/scss/layouts/layout_500/_banner.scss
@@ -3,6 +3,7 @@
   margin-right: auto;
   width: 80%;
   max-width: 500px;
+  background-image: url(../../../i/img/bg-500.png);
 
   &_title {
     font-size: 35px;
