--- a/src/scss/layouts/layout_800/_banner.scss
+++ b/src/scss/layouts/layout_800/_banner.scss
@@ -3,6 +3,8 @@
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
+  background-image: url(../../../i/img/bg-800.png);
+
   &_title {
     font-size: 50px;
     line-height: 50px;
