--- a/src/scss/layouts/layout_000/_banner.scss
+++ b/src/scss/layouts/layout_000/_banner.scss
@@ -3,6 +3,9 @@
   margin-right: 50px;
   margin-top: 25px;
   padding-top: 60px;
+  overflow: hidden;
+  box-shadow: 0px 40px 65px 5px rgba(212, 148, 30, 0.5);
+
   // padding-bottom: 60px;
 
   // background: rgb(134, 179, 45);
