--- a/src/scss/layouts/layout_800/_title.scss
+++ b/src/scss/layouts/layout_800/_title.scss
@@ -1,43 +1,11 @@
-.title {
-  &__title {
-    font-size: 48px;
-  }
-
-  &__description {
-    font-size: 20px;
-  }
-  &__button-and-phone {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 55px;
-  }
-
-  &__phone-section {
-    margin-top: 0;
-    margin-left: 15px;
-    &:hover .number {
-      background-color: $dark-grey;
-    }
-  }
-
-  &__button-section {
-    margin-right: 15px;
-    margin-top: auto;
-    margin-bottom: auto;
-
-    &__button {
-      &:hover {
-        color: #fff;
-        &:after {
-          width: 100%;
-        }
-      }
-    }
-  }
-  &__circle {
-    &:hover {
-      background-color: $dark-grey;
-    }
+.title-div {
+  width: 80%;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  &_text {
+    font-size: 50px;
+    line-height: 55px;
+    text-align: center;
   }
 }
