--- a/src/scss/layouts/layout_800/_title.scss
+++ b/src/scss/layouts/layout_800/_title.scss
@@ -8,4 +8,12 @@
     line-height: 55px;
     text-align: center;
   }
+  &_motor {
+    display: block;
+    right: 12%;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    position: relative;
+  }
 }
