--- a/src/scss/layouts/layout_000/_title.scss
+++ b/src/scss/layouts/layout_000/_title.scss
@@ -16,4 +16,81 @@
   &_motor {
     display: none;
   }
+
+  &_list {
+    &_ul {
+      list-style-type: none;
+      padding-inline-start: 0;
+    }
+  }
+
+  &_item {
+    padding: 25px 64px 25px 25px;
+    font-size: 19px;
+    border-radius: 16px;
+    font-family: $wowFontFamily;
+    line-height: 19px;
+    color: #fff;
+    font-weight: 400;
+    letter-spacing: 0.25px;
+    margin-bottom: 15px;
+    box-shadow: 0 2px 20px rgba(119, 119, 119, 0.25);
+    position: relative;
+
+    &_1 {
+      background: linear-gradient(90deg, #fb3b6b 0%, #8d52e8 97.38%);
+      &::after {
+        content: "";
+        background: url(../../../i/img/card.png);
+        position: absolute;
+        right: 25px;
+        top: 35px;
+        width: 50px;
+        height: 50px;
+        background-size: 50px 50px;
+      }
+    }
+
+    &_2 {
+      background: linear-gradient(90deg, #fba831 0%, #f26725 97.38%);
+      &::after {
+        content: "";
+        background: url(../../../i/img/batman.png);
+        position: absolute;
+        right: 25px;
+        top: 15px;
+        width: 50px;
+        height: 50px;
+        background-size: 50px 50px;
+      }
+    }
+
+    &_3 {
+      background: linear-gradient(90deg, #29c7a0 0%, #3473db 97.38%);
+      &::after {
+        content: "";
+        background: url(../../../i/img/note.png);
+        position: absolute;
+        right: 25px;
+        top: 17px;
+        width: 50px;
+        height: 50px;
+        background-size: 50px 50px;
+      }
+    }
+
+    &_4 {
+      background: linear-gradient(90deg, #e7d749 0%, #8fc832 97.38%);
+      &::after {
+        content: "";
+        background: url(../../../i/img/party.png);
+        position: absolute;
+        right: 25px;
+        top: 35px;
+        width: 50px;
+        height: 50px;
+        background-size: 50px 50px;
+      }
+    }
+  }
 }
