--- a/src/scss/layouts/layout_1200/_title.scss
+++ b/src/scss/layouts/layout_1200/_title.scss
@@ -1,37 +1,32 @@
-.title {
+.title-div {
+  width: 90%;
+  max-width: 1200px;
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
 
-  &__container-1200 {
-    flex-basis: 620px;
-  }
-  &__slider-container {
-    flex-basis: 45%;
-    width: 45%;
-    margin-top: 95px;
-    margin-bottom: 30px;
-    margin-right: 0;
-  }
-  &__title {
-    font-size: 64px;
+  // display: grid;
+  // grid-template-columns: 50% 50%;
+  // grid-template-rows: 1fr 1fr;
+  // grid-template-areas:
+  //   "f-1200 s-1200"
+  //   "l-1200";
+
+  &_motor {
+    flex-grow: 1;
+    width: 65vw;
+    // grid-area: f-1200;
   }
 
-  &__description {
-    width: 90%;
-  }
-  &__intro,
-  &__title,
-  &__description {
-    text-align: left;
+  &_text {
+    margin-top: 80px;
+    margin-bottom: 45px;
+    // grid-area: s-1200;
   }
 
-  &__button-and-phone {
-    justify-content: start;
+  &_list {
+    // grid-area: l-1200;
   }
+}
 
-  &__slider {
-    width: 100%;
-    margin-top: 25px;
-  }
+.div-for1200 {
+  flex-grow: 1;
 }
