--- a/src/scss/layouts/layout_800/_title.scss
+++ b/src/scss/layouts/layout_800/_title.scss
@@ -15,11 +15,38 @@
 
     height: 606px;
     display: block;
+    margin-bottom: 145px;
+
+    &_button {
+      font-size: 20px;
+      line-height: 70px;
+      max-width: 375px;
+      width: 375px;
+      padding: 11px 16px;
+      border-radius: 60px;
+      background: #ffe500;
+      color: #1b1b1b;
+      font-weight: 600;
+      position: absolute;
+      bottom: -90px;
+      left: 228px;
+      text-align: left;
+      text-decoration: none;
+      line-height: 22px;
+      font-family: "Open Sans", Arial, sans-serif;
+      letter-spacing: 0.25px;
+      height: auto;
+      &::before {
+        content: url(../../../i/img/play-icon.png);
+        margin-right: 10px;
+        vertical-align: middle;
+      }
+    }
 
     &_img {
       position: absolute;
-      width: 608px;
-      max-width: 608px;
+      width: 600px;
+      max-width: 600px;
     }
   }
 
