--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,10 @@
   @import "layouts/layout_800/index";
 }
 
+@media (min-width: 990px) {
+  @import "layouts/layout_990/index";
+}
+
 @media (min-width: 1200px) {
   @import "layouts/layout_1200/index";
 }
