--- a/src/scss/layouts/layout_500/_heroes.scss
+++ b/src/scss/layouts/layout_500/_heroes.scss
@@ -1,6 +1,10 @@
 .heroes {
+  &_grid_block {
+    padding-top: 190px;
+  }
   &_grid_block_img {
-    width: 300px;
+    width: 250px;
     max-width: 300px;
+    top: -150px;
   }
 }
