--- a/src/scss/layouts/layout_000/_heroes.scss
+++ b/src/scss/layouts/layout_000/_heroes.scss
@@ -22,6 +22,7 @@
       letter-spacing: 1.8px;
       color: #f1419c;
       font-family: $mainFontFamily;
+      margin-bottom: 120px;
     }
   }
 
@@ -33,6 +34,7 @@
       margin-top: 70px;
       margin-left: auto;
       margin-right: auto;
+      margin-bottom: 200px;
       padding-bottom: 50px;
       display: flex;
       flex-direction: column;
@@ -40,7 +42,6 @@
       box-shadow: 0 0 50px #e4d8e4;
       border-radius: 20px;
       position: relative;
-      margin-bottom: 30px;
       text-align: center;
       color: #3a3a3a;
       font-size: 15px;
@@ -48,18 +49,25 @@
       font-family: $mainFontFamily;
       font-weight: 400;
       letter-spacing: 0.25px;
-
-      &_1 {
-        margin-top: 55px;
-      }
+      padding-top: 125px;
       &_img {
+        position: absolute;
+        top: -125px;
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 250px;
+        width: 200px;
         max-width: 250px;
 
         margin: 0 auto;
+        z-index: 10000;
+
+        left: 50%;
+        transform: translate(-50%, 0);
+      }
+
+      &_1 {
+        margin-top: 55px;
       }
 
       &_btn {
@@ -97,6 +105,7 @@
         cursor: pointer;
         text-align: center;
         margin-top: 50px;
+        margin-bottom: 30px;
       }
     }
   }
