--- a/src/scss/layouts/layout_990/_heroes.scss
+++ b/src/scss/layouts/layout_990/_heroes.scss
@@ -17,6 +17,11 @@
       &_img {
         width: 220px;
       }
+
+      &_7 {
+        width: 385px;
+        max-width: 385px;
+      }
     }
   }
 }
