--- a/src/scss/layouts/layout_800/_heroes.scss
+++ b/src/scss/layouts/layout_800/_heroes.scss
@@ -1,4 +1,13 @@
 .heroes {
+  &_title {
+    &_name {
+      font-size: 32px;
+    }
+    &_text1 {
+      margin-bottom: 20px;
+    }
+  }
+
   &_grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -15,7 +24,7 @@
     &_block {
       padding-top: 160px;
       width: 100%;
-      margin-bottom: 80px;
+      margin-bottom: 25px;
 
       &_1 {
         grid-area: first;
