--- a/src/scss/layouts/layout_000/_show.scss
+++ b/src/scss/layouts/layout_000/_show.scss
@@ -1,17 +1,17 @@
 .show {
   &_title {
-    font-size: 20px;
-    line-height: 22px;
+    font-size: 28px;
+    line-height: 28px;
     padding: 0 0 20px;
     text-align: center;
-    color: #3a3a3a;
+    color: white;
     letter-spacing: 1.2px;
     font-family: $wowFontFamily;
     margin-top: 90px;
   }
   &_txt {
     padding-bottom: 35px;
-    color: #747474;
+    color: white;
     font-size: 18px;
     line-height: 18px;
     font-family: $wowFontFamily;
@@ -30,7 +30,8 @@
     margin-bottom: 100px;
 
     &_block {
-      width: 80%;
+      width: 100%;
+      padding: 0 15px;
       margin-left: auto;
       margin-right: auto;
 
@@ -50,4 +51,17 @@
       }
     }
   }
+}
+
+.bg {
+  background: linear-gradient(90deg, #fb3b6b 0%, #8d52e8 97.38%);
+  width: 80%;
+  max-width: 500px;
+  border-radius: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+  margin-top: 100px;
+  padding-top: 5px;
+  padding-bottom: 20px;
 }
