--- a/src/scss/layouts/layout_000/_show.scss
+++ b/src/scss/layouts/layout_000/_show.scss
@@ -13,7 +13,7 @@
     padding-bottom: 35px;
     color: white;
     font-size: 18px;
-    line-height: 18px;
+    line-height: 20px;
     font-family: $wowFontFamily;
     text-align: center;
     display: block;
@@ -55,9 +55,10 @@
 
 .bg {
   background: linear-gradient(90deg, #fb3b6b 0%, #8d52e8 97.38%);
-  width: 80%;
-  max-width: 500px;
-  border-radius: 40px;
+
+  width: 100%;
+  // max-width: 500px;
+  // border-radius: 40px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 100px;
