--- a/src/scss/layouts/layout_1200/_show.scss
+++ b/src/scss/layouts/layout_1200/_show.scss
@@ -2,6 +2,10 @@
   width: 80%;
   max-width: 1800px;
 
+  &_list {
+    margin-bottom: 30px;
+  }
+
   &_list_block {
     width: 70%;
     max-width: 650px;
@@ -9,8 +13,15 @@
   &_title {
     font-size: 44px;
     line-height: 1.2;
+    margin-top: 30px;
   }
   &_txt {
     font-size: 24px;
   }
+}
+
+.bg {
+  width: 100%;
+  max-width: 100%;
+  padding: 5px 0;
 }
