--- a/src/scss/layouts/layout_1200/_show.scss
+++ b/src/scss/layouts/layout_1200/_show.scss
@@ -21,6 +21,9 @@
 }
 
 .bg {
+  background-image: url(../../../i/img/bubbles.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   max-width: 100%;
   padding: 5px 0;
