--- a/src/scss/layouts/layout_000/_prices.scss
+++ b/src/scss/layouts/layout_000/_prices.scss
@@ -1,239 +1,138 @@
-.prices-container {
-  background-color: $beige;
-  position: relative;
-}
-
 .prices {
-  padding: 60px 16px 0;
+  width: 90%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
 
-  &__intro {
-    @include intro;
-    margin-bottom: 12px;
-    margin-top: 0;
-  }
-
-  &__title {
-    @include h2;
-    margin-top: 0;
-  }
-
-  &__description {
-    color: $grey;
+  &_title {
+    font-size: 28px;
+    display: block;
     text-align: center;
-    font-family: $mainFontFamily;
-    font-size: 16px;
-    line-height: 1.7em;
-    margin-bottom: 32px;
+    line-height: 1.2;
+    padding: 20px 0;
+    color: #3a3a3a;
+    letter-spacing: 1.2px;
+    font-family: $wowFontFamily;
   }
-
-  &__competencies-list {
+  &_pack {
     list-style-type: none;
     padding-inline-start: 0;
-
-    &__item {
-      &__title {
-        font-family: $titleFontFamily;
-        font-weight: 400;
-        font-size: 22px;
-        line-height: 28px;
-        margin-bottom: 7px;
-        color: $dark-grey;
-      }
-      &__rating-border {
-        padding: 5px;
-        margin-top: 8px;
-        border: 2px dashed $rating-border;
-        border-radius: 100px;
-        position: relative;
-      }
-
-      &__rating-string {
-        background-color: $rating-string;
-        height: 6px;
-        line-height: 6px;
-        border-radius: 30px;
-        font-size: 11px;
-
-        // &_92 {
-        // }
-
-        &_75 {
-          width: 75%;
-        }
-
-        &_63 {
-          width: 63%;
-        }
-      }
-
-      &__rating-number {
-        font-family: $mainFontFamily;
-        font-weight: 600;
-        line-height: 16px;
-        font-size: 20px;
-        color: $dark-grey;
-        position: absolute;
-        right: 0;
-        top: -30px;
-        margin: 0;
-      }
-    }
-  }
-
-  &__prices-list {
-    list-style-type: none;
-    padding-inline-start: 0;
-
-    padding-bottom: 70px;
-    &__item {
-      background-color: $white;
-      padding: 0px 0px 40px 0px;
-      text-align: center;
-      border-radius: 40px;
+    &_block {
+      max-width: 460px;
+      padding: 20px 32px 40px;
+      margin: 0 auto 40px;
+      border: 6px solid;
+      background-color: #fff;
+      box-shadow: 0 4px 250px rgba(0, 0, 0, 0.25);
+      border-radius: 13px;
+      display: flex;
+      flex-direction: column;
 
       &_1 {
-        margin-top: 64px;
-        margin-bottom: 50px;
+        border-color: #ffde2e;
       }
 
-      &__img-container {
-        background-size: cover;
-        min-height: 240px;
-        border-radius: 30px;
-        margin-bottom: 20px;
+      &_2 {
+        border-color: #fd7777;
+      }
+
+      &_3 {
+        border-color: #a15cff;
+      }
+
+      &_4 {
+        border-color: #8fc832;
+      }
+      &_title {
+        text-align: center;
+        line-height: 46px;
+        font-family: $mainFontFamily;
+        font-weight: 500;
+        font-size: 20px;
+        border-radius: 48px;
+        margin-top: 20px;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
 
         &_1 {
-          background-image: url(../i/img/prices/prices_foto_01.jpg);
-          background-position: center;
+          background-color: #ffde2e;
         }
         &_2 {
-          background-image: url(../i/img/prices/prices_foto_02.jpg);
-          background-position: center;
+          background-color: #fd7777;
+        }
+        &_3 {
+          background-color: #a15cff;
+        }
+        &_4 {
+          background-color: #8fc832;
         }
       }
 
-      &__price {
-        font-family: $mainFontFamily;
-        font-size: 60px;
-        line-height: 60px;
-        font-weight: 600;
-        padding: 0 20px;
-        color: $dark-grey;
-        margin: 0;
-
-        &__usd {
-          vertical-align: super;
-          font-size: 24px;
-        }
+      &_time {
+        font-family: $wowFontFamily;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 18px;
+        line-height: 18px;
+        margin-top: 10px;
       }
 
-      &__level {
-        font-family: $titleFontFamily;
-        font-weight: 400;
-        color: $dark-blue;
-        font-size: 22px;
+      &_listin {
+        margin-top: 30px;
+        list-style-type: disc;
+        font-family: $wowFontFamily;
+        font-size: 18px;
         line-height: 28px;
-        padding: 0 20px;
-        margin: 4px 0 18px;
-        text-align: center;
       }
 
-      &__sublist {
-        list-style-type: none;
-        padding-inline-start: 0;
-        margin-bottom: 28px;
-        padding: 0 30px;
+      &_price {
+        font-family: $mainFontFamily;
+        font-weight: 500;
+        font-size: 24px;
+        text-align: center;
+        margin-top: 0;
+        background-color: #ffde2e;
+        color: #fff;
+        padding: 10px;
+        border-radius: 48px;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
 
-        &__subitem {
-          font-family: $mainFontFamily;
-          font-size: 16px;
-          line-height: 22px;
-          text-align: left;
-          padding: 8px 0px;
-          color: $dark-grey;
-          &__check {
-            color: $main;
-            font-family: $descriptionFontFamily;
-            font-size: 24px;
-            margin-right: 5px;
+        &_1 {
+          background-color: #ffde2e;
+          margin-top: 70px;
+        }
+        &_2 {
+          background-color: #fd7777;
+          &_old {
+            color: #fd7777;
+            background-color: initial;
+            text-decoration: line-through;
+            font-size: 16px;
+          }
+        }
+        &_3 {
+          background-color: #a15cff;
+          &_old {
+            color: #a15cff;
+            background-color: initial;
+            text-decoration: line-through;
+            font-size: 16px;
+          }
+        }
+        &_4 {
+          background-color: #8fc832;
+          &_old {
+            color: #8fc832;
+            background-color: initial;
+            text-decoration: line-through;
+            font-size: 16px;
           }
         }
       }
     }
-  }
-
-  &__btn-section {
-    &__btn {
-      @include button;
-      min-width: 180px;
-      font-size: 14px;
-      display: block;
-      position: relative;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 30px;
-
-      &__arrow {
-        width: 25px;
-        position: absolute;
-        top: 11px;
-        right: 35px;
-      }
-    }
-  }
-}
-
-.prices-waves {
-  position: absolute;
-
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  left: 0;
-
-  &_1 {
-    top: -88px;
-    transform: rotate(180deg);
-  }
-
-  &_2 {
-    bottom: -88px;
-  }
-
-  & svg {
-    position: relative;
-    display: block;
-    width: calc(100% + 1.3px);
-    height: 90px;
-  }
-
-  &__shape-fill {
-    fill: #f4eee5;
-  }
-}
-
-// --Lines animation
-.js-92 {
-  width: 0%;
-  transition: all 1s ease;
-
-  &_active {
-    width: 92%;
-  }
-}
-.js-75 {
-  width: 0%;
-  transition: all 1s ease;
-
-  &_active {
-    width: 75%;
-  }
-}
-.js-63 {
-  width: 0%;
-  transition: all 1s ease;
-
-  &_active {
-    width: 63%;
   }
 }
