--- a/src/scss/layouts/layout_000/_prices.scss
+++ b/src/scss/layouts/layout_000/_prices.scss
@@ -1,5 +1,6 @@
 .prices {
-  width: 90%;
+  width: 85%;
+  max-width: 400px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -131,6 +132,58 @@
             text-decoration: line-through;
             font-size: 16px;
           }
+        }
+      }
+    }
+  }
+
+  &_avreise {
+    color: #e93388;
+    font-family: $wowFontFamily;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+  }
+  &_kaker {
+    color: #c35ebd;
+    font-family: $wowFontFamily;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }
+
+  &_extra {
+    background-color: #fe8b05;
+    border-radius: 40px;
+    padding: 20px 32px 40px;
+    box-shadow: 0 4px 250px rgba(0, 0, 0, 0.25);
+    margin-top: 40px;
+
+    &_title {
+      font-family: $wowFontFamily;
+      color: #fff;
+      font-weight: bold;
+      font-size: 24px;
+      text-align: center;
+      margin-bottom: 50px;
+      margin-top: 30px;
+    }
+
+    &_list {
+      font-family: $wowFontFamily;
+      color: #fff;
+      font-size: 18px;
+      line-height: 50px;
+
+      &_num {
+        background-color: #e5206b;
+        padding: 10px;
+        border-radius: 30px;
+
+        &_2 {
+          background-color: #c35ebd;
         }
       }
     }
