--- a/src/scss/layouts/layout_000/_heroes.scss
+++ b/src/scss/layouts/layout_000/_heroes.scss
@@ -64,6 +64,13 @@
 
         left: 50%;
         transform: translate(-50%, 0);
+
+        &_2 {
+          width: 130px;
+        }
+        &_3 {
+          width: 180px;
+        }
       }
 
       &_1 {
