--- a/src/scss/layouts/layout_990/_heroes.scss
+++ b/src/scss/layouts/layout_990/_heroes.scss
@@ -16,6 +16,10 @@
       padding-top: 175px;
       &_img {
         width: 220px;
+
+        &_2 {
+          width: 155px;
+        }
       }
 
       &_7 {
