--- a/src/scss/layouts/layout_800/_heroes.scss
+++ b/src/scss/layouts/layout_800/_heroes.scss
@@ -54,6 +54,10 @@
       width: 200px;
       max-width: 2000px;
       top: -120px;
+
+      &_2 {
+        width: 155px;
+      }
     }
 
     &_block_2 {
