--- a/src/scss/layouts/layout_000/_header.scss
+++ b/src/scss/layouts/layout_000/_header.scss
@@ -36,7 +36,7 @@
   &_text-logo {
     color: white;
     font-size: 15px;
-    font-family: $wowFontFamily;
+    font-family: $mainFontFamily;
     display: none;
   }
 
