--- a/src/scss/layouts/layout_000/_kontakt.scss
+++ b/src/scss/layouts/layout_000/_kontakt.scss
@@ -7,7 +7,6 @@
       font-size: 28px;
       display: block;
       text-align: center;
-      line-height: 1.2;
       padding: 20px 0;
       color: #3a3a3a;
       letter-spacing: 1.2px;
@@ -15,10 +14,11 @@
     }
 
     &_txt {
-      color: #747474;
-      font-size: 18px;
+      color: #f1419c;
+      font-size: 14px;
       line-height: 18px;
-      font-family: $wowFontFamily;
+      font-family: $mainFontFamily;
+      text-transform: uppercase;
       text-align: center;
       display: block;
       width: 80%;
@@ -33,12 +33,12 @@
       background-repeat: no-repeat;
       background-position: center;
       display: block;
-      font-size: 28px;
-      line-height: 28px;
+      font-size: 24px;
+      line-height: 24px;
       padding: 36px 0 120px;
       width: 100%;
       background-size: contain;
-      font-family: $wowFontFamily;
+      font-family: $mainFontFamily;
       font-weight: bold;
 
       color: #2b3d3f;
