--- a/src/scss/layouts/layout_000/_title.scss
+++ b/src/scss/layouts/layout_000/_title.scss
@@ -7,7 +7,7 @@
     padding-right: 15px;
     font-family: $wowFontFamily;
     font-size: 45px;
-    font-weight: 900;
+    font-weight: 800;
     line-height: 48px;
     text-align: left;
     letter-spacing: 1.2px;
@@ -28,7 +28,7 @@
     padding: 25px 64px 25px 25px;
     font-size: 19px;
     border-radius: 16px;
-    font-family: $wowFontFamily;
+    font-family: $mainFontFamily;
     line-height: 19px;
     color: #fff;
     font-weight: 400;
