--- a/src/scss/layouts/layout_1500/_banner.scss
+++ b/src/scss/layouts/layout_1500/_banner.scss
@@ -5,13 +5,14 @@
     width: 550px;
     max-width: 550px;
     min-width: 550px;
+    padding: 0 15px 90px;
   }
   &_title {
     text-align: left;
     max-width: 495px;
     margin-left: 65px;
-    font-size: 55px;
-    line-height: 55px;
+    font-size: 80px;
+    line-height: 80px;
   }
 
   &_img-block {
