--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,10 +1,12 @@
 //-----------------------------FONTS-----------------------------
-$google-font: "https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600&family=Zilla+Slab:wght@400;500;600;700&display=swap";
+// $google-font: "https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600&family=Zilla+Slab:wght@400;500;600;700&display=swap";
+$google-font: "https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap";
 
 $mainFontFamily: "Open Sans", sans-serif;
 $titleFontFamily: "Capriola", serif;
 $descriptionFontFamily: "Love Ya Like A Sister", cursive;
-$wowFontFamily: "Zilla Slab", sans-serif;
+// $wowFontFamily: "Zilla Slab", sans-serif;
+$wowFontFamily: "Montserrat", sans-serif;
 
 // -----------------------------COLORS-----------------------------
 $main: #f39f5f;
