--- a/src/scss/layouts/layout_000/_prices.scss
+++ b/src/scss/layouts/layout_000/_prices.scss
@@ -165,14 +165,16 @@
       font-family: $wowFontFamily;
       color: #fff;
       font-weight: bold;
-      font-size: 24px;
+      font-size: 22px;
+      line-height: 28px;
+      letter-spacing: 1.2;
       text-align: center;
       margin-bottom: 50px;
       margin-top: 30px;
     }
 
     &_list {
-      font-family: $wowFontFamily;
+      font-family: $mainFontFamily;
       color: #fff;
       font-size: 18px;
       line-height: 50px;
