--- a/src/scss/layouts/layout_000/_show.scss
+++ b/src/scss/layouts/layout_000/_show.scss
@@ -11,13 +11,14 @@
     letter-spacing: 1.2px;
     font-family: $wowFontFamily;
     margin-top: 90px;
+    font-weight: 800;
   }
   &_txt {
     padding-bottom: 35px;
     color: white;
-    font-size: 18px;
-    line-height: 20px;
-    font-family: $wowFontFamily;
+    font-size: 14px;
+    line-height: 18px;
+    font-family: $mainFontFamily;
     text-align: center;
     display: block;
     padding: 0 0 65px;
@@ -25,6 +26,8 @@
     margin-left: auto;
     margin-right: auto;
     font-weight: normal;
+    letter-spacing: 1px;
+    text-transform: uppercase;
   }
 
   &_list {
