--- a/src/scss/layouts/layout_000/_tilleg.scss
+++ b/src/scss/layouts/layout_000/_tilleg.scss
@@ -5,9 +5,10 @@
     font-size: 28px;
     display: block;
     text-align: center;
-    line-height: 1.2;
+    line-height: 28px;
     padding: 20px 0;
     color: #3a3a3a;
+    font-weight: 800;
     letter-spacing: 1.2px;
     font-family: $wowFontFamily;
   }
