--- a/src/scss/layouts/layout_1200/_prices.scss
+++ b/src/scss/layouts/layout_1200/_prices.scss
@@ -2,7 +2,8 @@
   max-width: 1000px;
 
   &_title {
-    font-size: 44px;
+    font-size: 45px;
+    line-height: 45px;
     margin-bottom: 40px;
   }
 
@@ -23,10 +24,6 @@
   &_kaker {
     font-size: 36px;
     margin-top: 20px;
-  }
-
-  &_extra_title {
-    font-size: 36px;
   }
 }
 .grid-1 {
