--- a/src/scss/layouts/layout_800/_kontakt.scss
+++ b/src/scss/layouts/layout_800/_kontakt.scss
@@ -12,14 +12,16 @@
       display: none;
     }
     &_number {
-      background-size: 725px 390px;
+      background-size: cover;
       border-radius: 40px;
       padding: 50px 0 35px;
-      font-size: 40px;
-
+      font-size: 45px;
+      font-weight: bold;
+      color: #3a3a3a;
       &_gratis {
-        font-size: 28px;
-        margin-top: 30px;
+        font-size: 24px;
+        padding: 10px;
+        margin-top: 60px;
         // margin-bottom: 25px;
       }
     }
@@ -51,12 +53,13 @@
 }
 .second-txt {
   display: block;
-  color: #747474;
-  font-size: 18px;
-  line-height: 18px;
-  font-family: $wowFontFamily;
+  color: #f1419c;
+  font-size: 14px;
+  line-height: 14px;
+  font-family: $mainFontFamily;
+  text-transform: uppercase;
   text-align: center;
-  width: 60%;
+  width: 85%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
