--- a/src/scss/layouts/layout_800/_prices.scss
+++ b/src/scss/layouts/layout_800/_prices.scss
@@ -1,4 +1,12 @@
 .prices {
   width: 90%;
   max-width: 642px;
+
+  &_extra_title {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 28px;
+    line-height: 30px;
+  }
 }
