--- a/src/scss/layouts/layout_800/_show.scss
+++ b/src/scss/layouts/layout_800/_show.scss
@@ -1,10 +1,10 @@
 .show {
+  width: 100%;
+  max-width: 575px;
   &_title {
-    font-size: 32px;
-    line-height: 40px;
   }
   &_txt {
-    font-size: 20px;
+    max-width: 50%;
   }
   &_list {
     width: 100%;
