--- a/src/scss/layouts/layout_1200/_show.scss
+++ b/src/scss/layouts/layout_1200/_show.scss
@@ -21,7 +21,7 @@
 }
 
 .bg {
-  background-image: url(../../../i/img/bubbles.jpg);
+  // background-image: url(../../../i/img/bubbles.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
