--- a/src/scss/layouts/layout_000/_show.scss
+++ b/src/scss/layouts/layout_000/_show.scss
@@ -62,15 +62,14 @@
 }
 
 .bg {
-  // background: linear-gradient(90deg, #fb3b6b 0%, #8d52e8 97.38%);
   background: rgb(233, 51, 136);
-  background: linear-gradient(
-    0deg,
-    rgba(233, 51, 136, 1) 0%,
-    rgba(195, 94, 189, 1) 48%,
-    rgba(126, 131, 239, 1) 83%,
-    rgba(79, 199, 252, 1) 100%
-  );
+  // background: linear-gradient(
+  //   0deg,
+  //   rgba(233, 51, 136, 1) 0%,
+  //   rgba(195, 94, 189, 1) 48%,
+  //   rgba(126, 131, 239, 1) 83%,
+  //   rgba(79, 199, 252, 1) 100%
+  // );
   width: 100%;
   // max-width: 500px;
   // border-radius: 40px;
