--- a/src/scss/layouts/layout_000/_kontakt.scss
+++ b/src/scss/layouts/layout_000/_kontakt.scss
@@ -59,6 +59,7 @@
         margin-bottom: 20px;
         color: white;
         transform: rotate(-7deg);
+        border-radius: 50px;
       }
     }
   }
