--- a/src/scss/layouts/layout_000/_kontakt.scss
+++ b/src/scss/layouts/layout_000/_kontakt.scss
@@ -1,4 +1,8 @@
 .kontakt {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
   &_block {
     &_h1 {
       width: 80%;
@@ -28,29 +32,31 @@
     }
 
     &_number {
-      background-image: url(../../../i/img/blue_box.jpg);
-      background-size: contain;
+      // background-image: url(../../../i/img/blue_box.jpg);
+      background-image: url(../../../i/img/gifts.jpg);
+      background-size: cover;
       background-repeat: no-repeat;
-      background-position: center;
+      // background-position: center;
       display: block;
-      font-size: 24px;
-      line-height: 24px;
-      padding: 36px 0 120px;
-      width: 100%;
-      background-size: contain;
+      font-size: 36px;
+      line-height: 1.2;
+      padding: 36px 0;
+      // width: 100%;
       font-family: $mainFontFamily;
       font-weight: bold;
 
-      color: #2b3d3f;
+      color: #ffffff;
       text-decoration: none;
       cursor: pointer;
       text-align: center;
-      font-weight: 400;
+      font-weight: 700;
       letter-spacing: 0.25px;
+      border-radius: 40px;
 
       &_gratis {
         margin-top: 20px;
-        background-color: #e5206b;
+        // background-color: #e5206b;
+        background-color: #40a85d;
         max-width: 260px;
         display: block;
         text-align: center;
@@ -60,6 +66,8 @@
         color: white;
         transform: rotate(-7deg);
         border-radius: 50px;
+        font-weight: 400;
+        font-size: 24px;
       }
     }
   }
