--- a/src/scss/layouts/layout_000/_show.scss
+++ b/src/scss/layouts/layout_000/_show.scss
@@ -1,82 +1,66 @@
 .show {
-  &_title {
-    max-width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 28px;
-    line-height: 28px;
-    padding: 0 0 20px;
-    text-align: center;
-    color: white;
-    letter-spacing: 1.2px;
-    font-family: $wowFontFamily;
-    margin-top: 90px;
-    font-weight: 800;
-  }
-  &_txt {
-    padding-bottom: 35px;
-    color: white;
-    font-size: 14px;
-    line-height: 18px;
-    font-family: $mainFontFamily;
-    text-align: center;
-    display: block;
-    padding: 0 0 65px;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    font-weight: normal;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-  }
-
-  &_list {
-    list-style-type: none;
-    padding-inline-start: 0;
-    margin-bottom: 100px;
-
-    &_block {
-      width: 100%;
-      padding: 0 15px;
-      margin-left: auto;
-      margin-right: auto;
-
-      &_h {
-        text-align: center;
-        // background: #9f40ff;
-        background: #ffcc5c;
-
-        color: black;
-        padding: 1.3em 1em;
-        font-weight: 500;
-        font-size: 16px;
-        border-radius: 40px 40px 0 0;
-      }
-
-      &_img {
-        width: 100%;
-        border-radius: 0 0 40px 40px;
-      }
-    }
-  }
-}
-
-.bg {
-  background: rgb(233, 51, 136);
-  // background: linear-gradient(
-  //   0deg,
-  //   rgba(233, 51, 136, 1) 0%,
-  //   rgba(195, 94, 189, 1) 48%,
-  //   rgba(126, 131, 239, 1) 83%,
-  //   rgba(79, 199, 252, 1) 100%
-  // );
+  // width: 90%;
   width: 100%;
-  // max-width: 500px;
+
+  background-image: url(../../../i/img/show-bg-s.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: bottom;
   // border-radius: 40px;
+
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 100px;
-  margin-top: 100px;
-  padding-top: 5px;
-  padding-bottom: 20px;
+  margin-top: 80px;
+  margin-bottom: 60px;
+  padding-bottom: 285px;
+
+  &_title {
+    font-size: 38px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 1.2px;
+    font-weight: 800;
+    font-family: $wowFontFamily;
+    color: #ffca6c;
+    padding-top: 95px;
+
+    &_sec {
+      font-size: 20px;
+      font-family: $wowFontFamily;
+      color: #ffffff;
+      line-height: 1.2;
+      text-align: center;
+    }
+  }
+  &_main-text {
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #ffffff;
+    font-family: $mainFontFamily;
+    margin-top: 65px;
+    margin-bottom: 55px;
+    width: 310px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &_vent-snart {
+    font-size: 38px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 1.2px;
+    font-weight: 800;
+    font-family: $wowFontFamily;
+    color: #ffffff;
+    background: #f54ea4;
+    width: 315px;
+    padding: 20px 30px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 1000px;
+  }
 }
