--- a/src/scss/layouts/layout_1200/_show.scss
+++ b/src/scss/layouts/layout_1200/_show.scss
@@ -1,30 +1,20 @@
 .show {
-  width: 80%;
-  max-width: 1800px;
+  // width: 90%;
+  background-image: url(../../../i/img/show-bg-l.jpg);
 
-  &_list {
-    margin-bottom: 30px;
-  }
-
-  &_list_block {
-    width: 70%;
-    max-width: 650px;
-  }
   &_title {
-    font-size: 44px;
-    line-height: 1.2;
-    margin-top: 30px;
-  }
-  &_txt {
-    max-width: 390px;
-  }
-}
+    margin-right: 120px;
+    font-size: 70px;
 
-.bg {
-  // background-image: url(../../../i/img/bubbles.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  max-width: 100%;
-  padding: 5px 0;
+    &_sec {
+      margin-right: 120px;
+    }
+  }
+
+  &_main-text {
+    margin-right: 120px;
+  }
+  &_vent-snart {
+    margin-right: 120px;
+  }
 }
