--- a/src/scss/layouts/layout_500/_show.scss
+++ b/src/scss/layouts/layout_500/_show.scss
@@ -1,14 +1,17 @@
 .show {
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%;
-  max-width: 500px;
-  &_list_block {
-    width: 100%;
+  // width: 85%;
+  padding-bottom: 400px;
+  &_main-text {
+    color: #3a3a3a;
+    font-weight: 600;
   }
-
   &_title {
     font-size: 45px;
-    line-height: 45px;
+    font-weight: 800;
+    line-height: 1.2;
+  }
+  &_main-text {
+    // margin-top: 15px;
+    // margin-bottom: 160px;
   }
 }
